--- a/index.html
+++ b/index.html
@@ -11,22 +11,32 @@
     <div class="books">
         <ul></ul>
     </div>
-    <form>
-        <label for="title">Book title:</label>
-        <input type="text" id="title" name="title">
 
-        <label for="author">Book author:</label>
-        <input type="text" id="author" name="author">
+    <div class="button"><button id="new-book">NEW BOOK</button></div>
 
-        <label for="pages">Book pages:</label>
-        <input type="number" id="pages" name="pages" min="1">
-        <p>Have you read the book?:</p>
-        <input type="radio" id="read" name="read" value="true">
-        <label for="read">Yes, I have.</label>
-        <input type="radio" id="didntread" name="read" value="false">
-        <label for="didntread">No, I haven't.</label>
-
-        <button type="submit">Add book to library</button>
+    <form class="hidden">
+        <div>
+            <div>
+                <label for="title">Book title:</label>
+                <input type="text" id="title" name="title">
+            </div>
+            <div>
+                <label for="author">Book author:</label>
+                <input type="text" id="author" name="author">
+            </div>
+            <div>
+                <label for="pages">Book pages:</label>
+                <input type="number" id="pages" name="pages" min="1">
+            </div>
+            <div>
+                <p>Have you read the book?:</p>
+                <input type="radio" id="read" name="read" value="true">
+                <label for="read">Yes, I have.</label>
+                <input type="radio" id="didntread" name="read" value="false">
+                <label for="didntread">No, I haven't.</label>
+            </div>
+            <button type="submit">Add book to library</button>
+        </div>
     </form>
 </body>
 </html>
