--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="books">
-        <ul></ul>
+        <div>
+            <h1>Library's available books</h1>
+            <ul></ul>
+        </div>
     </div>
 
     <div class="button"><button id="new-book">NEW BOOK</button></div>
