--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <div>
             <div>
                 <label for="title">Book title:</label>
-                <input type="text" id="title" name="title">
+                <input type="text" id="title" name="title" required>
             </div>
             <div>
                 <label for="author">Book author:</label>
-                <input type="text" id="author" name="author">
+                <input type="text" id="author" name="author" required>
             </div>
             <div>
                 <label for="pages">Book pages:</label>
-                <input type="number" id="pages" name="pages" min="1">
+                <input type="number" id="pages" name="pages" min="1" required>
             </div>
             <div>
                 <p>Have you read the book?:</p>
-                <input type="radio" id="read" name="read" value="true">
+                <input type="radio" id="read" name="read" value="true" required>
                 <label for="read">Yes, I have.</label>
                 <input type="radio" id="didntread" name="read" value="false">
                 <label for="didntread">No, I haven't.</label>
